--- a/temp.css
+++ b/temp.css
@@ -9,3 +9,18 @@ slides > slide {
 iframe {
   height: 700px;
 }
+
+body {
+    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    color: red
+}
+
+h2 {
+    color: red;
+    text-align:center;
+    font-size:72px
+}
